<resources>
    <string name="app_name">Nearby Chat</string>
    <string name="action_settings">Settings</string>
    <string name="nearby_subscription_success">Connected successfully.</string>
    <string name="nearby_publish_message_failed">Could not publish message.</string>
    <string name="nearby_subscription_failed">Could not subscribe to chat.</string>
    <string name="username">Username</string>
    <string name="username_generate_button_description">Generate Username</string>
    <string name="action_enter_chat">Enter Chat</string>
    <string name="select_avatar_colour">Select Avatar Colour</string>
    <string name="welcome_message">Chat with people nearby you.</string>
    <string name="error_empty_username">Please enter or generate a username before joining the chat</string>
    <string name="error_empty_message">Please enter a message and try again</string>
    <string name="message_text_entry_field_hint">Type a message</string>
    <string name="message_send_button_description">Send Message</string>
    <string name="message_avatar_sent_description">Your Avatar</string>
    <string name="message_avatar_received_description">Sender\'s Avatar</string>
    <string name="user_avatar_content_description">User\'s Avatar</string>
    <string name="dialog_messages_ephemeral_positive_action">OK</string>
    <string name="dialog_messages_ephemeral_body">The messages you send in this chat aren\'t persistent and will disappear shortly after you leave the app, or turn off your screen</string>
    <string name="dialog_messages_ephemeral_negative_action">Don\'t Show Again</string>
    <string name="message_emoji_button_description">Choose emoticon</string>
    <string name="message_body_image_description">Message Image</string>
    <string name="message_image_button_description">Add image</string>
    <string name="message_text_entry_field_hint_images_picked">Send %1$s</string>
    <string name="error_image_to_large">Chosen image too large to send as a nearby message. Messages must be less than 100kb</string>
    <string name="message_image_send_in_progress">Sending message in the background. Larger images will take longer to be sent</string>

    <string-array name="animals">
        <item>Armadillo</item>
        <item>Buffalo</item>
        <item>Cheetah</item>
        <item>Dingo</item>
        <item>Eagle</item>
        <item>Ferret</item>
        <item>Giraffe</item>
        <item>Hippo</item>
        <item>Iguana</item>
        <item>Jaguar</item>
        <item>Kangaroo</item>
        <item>Llama</item>
        <item>Monkey</item>
        <item>Newt</item>
        <item>Orangutan</item>
        <item>Penguin</item>
        <item>Quail</item>
        <item>Rabbit</item>
        <item>Snake</item>
        <item>Tiger</item>
        <item>Urial</item>
        <item>Vulture</item>
        <item>Wolf</item>
        <item>Xerus</item>
        <item>Yak</item>
        <item>Zebra</item>
    </string-array>

    <string-array name="moods_and_adjectives">
        <item>Angry</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Clever</item>
        <item>Clean</item>
        <item>Fancy</item>
        <item>Obedient</item>
        <item>Brave</item>
        <item>Bewildered</item>
        <item>Clumsy</item>
        <item>Tiny</item>
        <item>Large</item>
        <item>Deafening</item>
        <item>Quiet</item>
        <item>Melodic</item>
        <item>Whispering</item>
        <item>Cold</item>
        <item>Warm</item>
    </string-array>
</resources>
